GNOME Bugzilla – Bug 680520
[0.11] oggdemux: warning in push mode : gst_buffer_fill: assertion `src != NULL' failed
Last modified: 2012-07-24 12:41:01 UTC
-base/tests/examples/playback$ G_DEBUG=fatal_warnings gdb --args ./.libs/lt-playback-test 0 'http://pearce.org.nz/video/big_buck_bunny_427x240.indexed.ogg' (gdb) run Starting program: /home/tpm/gst/0.11/gst-plugins-base/tests/examples/playback/.libs/lt-playback-test 0 http://pearce.org.nz/video/big_buck_bunny_427x240.indexed.ogg Setting URI: http://pearce.org.nz/video/big_buck_bunny_427x240.indexed.ogg Setting URI: (null) message from "vorbisdec0" (tag): GstMessageTag, taglist=(taglist)"taglist\,\ application-name\=\(string\)ffmpeg2theora-0.24\,\ extended-comment\=\(string\)\"SOURCE_OSHASH\\\=qx\"\,\ encoder\=\(string\)\"Xiph.Org\\\ libVorbis\\\ I\\\ 20090604\"\,\ encoder-version\=\(uint\)0\,\ audio-codec\=\(string\)Vorbis\,\ nominal-bitrate\=\(uint\)80000\,\ bitrate\=\(uint\)80000\;"; (lt-playback-test:8146): GStreamer-CRITICAL **: gst_buffer_fill: assertion `src != NULL' failed Program received signal SIGTRAP, Trace/breakpoint trap.
+ Trace 230575
Thread 140737028904704 (LWP 8153)
commit c9c4aedaa67d9468cb952821a6ec0cdebdf109e8 Author: Wim Taymans <wim.taymans@collabora.co.uk> Date: Tue Jul 24 14:36:58 2012 +0200 oggdemux: don't copy empty packets Don't try to copy empty packets, which contain a repeated frame in theora. Fixes https://bugzilla.gnome.org/show_bug.cgi?id=680520